--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">SciencePark</string>
+    <string name="logout">Log Out</string>
+    <string name="setting">Settings</string>
+    <string name="help">Help</string>
+    <string name="orderfood">Order Food</string>
+    <string name="orderstatus">Order Status</string>
+    <string name="orderlist">View All Orders</string>
 </resources>
